Available users table in dashboard UI is presenting good